--- a/lib/active-model/.gitignore
+++ b/lib/active-model/.gitignore
@@ -1,7 +1,10 @@
-/docs/
-/bin/
-/.shards/
+doc
+lib
+.crystal
+.shards
+
 
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
-/shard.lock
+shard.lock
+
